--- a/PRINCIPAL/principal.html
+++ b/PRINCIPAL/principal.html
@@ -92,7 +92,7 @@
               
           
   
-          <div class="forma-pagamento">
+          <!-- <div class="forma-pagamento">
               <h3>Forma de Pagamento</h3>
               <select id="formaPagamento" name="formaPagamento" required>
                   <option value="">Selecione a forma de pagamento</option>
@@ -105,7 +105,7 @@
                   <label for="parcelas">Quantidade de Parcelas:</label>
                   <input type="number" id="parcelas" name="parcelas" min="1" max="12">
               </div>
-          </div>
+          </div> -->
           <button type="submit">Adicionar Cliente</button>
           <button id="btnFinalizarVenda">Finalizar Venda</button>
   </form>
