login e cadastro funcionais

--- a/PRINCIPAL/cadastro.html
+++ b/PRINCIPAL/cadastro.html
@@ -25,6 +25,7 @@
             <br>
             <button type="submit">Cadastrar</button>
         </form>
+        <p>Já tem uma conta? <a href="/login">Faça seu login!</a></p>
     </div>
 
     <!-- Overlay do pop-up -->
