cliente sendo adicionado corretamente

--- a/PRINCIPAL/principal.html
+++ b/PRINCIPAL/principal.html
@@ -112,7 +112,7 @@
   <div class="modal-content">
       <span id="fecharModalCadastrar" class="close">&times;</span>
       <h3>Cadastrar Novo Cliente</h3>
-      <form id="clienteForm"> <!-- Remover action e method do form -->
+      <form id="clienteForm">
           <label for="nomeCliente">Nome:</label>
           <input type="text" id="nomeCliente" name="nomeCliente" placeholder="Digite o nome do cliente" required>
 
