data do comprovante funcionando

--- a/PRINCIPAL/principal.html
+++ b/PRINCIPAL/principal.html
@@ -151,7 +151,7 @@
 
 
   
-<button id="btnFinalizarVenda">Confirmar Venda</button>
+<button id="btnConfirmarVenda">Confirmar Venda</button>
 
 <!-- Comprovante de Venda -->
 <div class="comprovante" id="comprovante" style="display:none;">
@@ -429,6 +429,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="/js/geradorPdf.js"></script>
 <script src="/js/modal.js"></script>
+<script src="/js/popup.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <!-- <script src="/js/fornecedores.js"></script>
 <script src="/js/mais.js"></script> -->
